# social-credits-test

./: .clang-format  .clangd  .gitignore  README.md  color.cpp  color.h  main.cpp  meson.build  socialcredits.cpp  socialcredits.hpp
